<resources>
    <string name="app_name">Lab Application</string>
    <string name="hint_note_title">Название</string>
    <string name="hint_note_description">Описание</string>
    <string name="button_note_add">Добавить</string>
    <string name="button_note_save">Сохранить</string>
    <string name="button_note_edit">Редактировать</string>
    <string name="button_note_show_last">Показать последнюю заметку</string>

    <string name="text_example_note_title">Заметка №%s</string>
    <string name="text_example_note_description">Описание заметки</string>
    <string name="completed">Выполнено</string>

    <string name="note_list">Список заметок</string>
    <string name="note_description">Описание заметки</string>
</resources>

