<?xml version="1.0" encoding="utf-8"?>
<com.glebalekseev.lab.view.NoteView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:gravity="center"
    android:orientation="vertical"
    app:addViewId="@id/addNoteBtn"
    app:descriptionTextViewId="@id/noteDescriptionET"
    app:editViewId="@id/editNoteBtn"
    app:showLastViewId="@id/showLastNoteBtn"
    app:showNextViewId="@id/showNextNoteBtn"
    app:showPrevViewId="@id/showPrevNoteBtn"
    app:titleTextViewId="@id/noteTitleET">

    <TextView
        android:id="@+id/noteTitleET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/hint_note_title"
        tools:text="Задача 1"
        />

    <TextView
        android:id="@+id/noteDescriptionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/hint_note_description"
        tools:text="Описание задачи 1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addNoteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/default_btn_background"
            android:minHeight="40dp"
            android:text="@string/button_note_add"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editNoteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/default_btn_background"
            android:minHeight="40dp"
            android:text="@string/button_note_edit"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/showPrevNoteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/default_btn_background"
            android:backgroundTint="#d6d7d6"
            android:minHeight="40dp"
            android:src="@drawable/ic_arrow_circle_left"
            android:tint="@color/black" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/showNextNoteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/default_btn_background"
            android:backgroundTint="#d6d7d6"
            android:minHeight="40dp"
            android:rotation="180"
            android:src="@drawable/ic_arrow_circle_left"
            android:tint="@color/black" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showLastNoteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/default_btn_background"
        android:minHeight="40dp"
        android:text="@string/button_note_show_last"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

</com.glebalekseev.lab.view.NoteView>